--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -4789,7 +4789,7 @@
                                                         <rect key="frame" x="8" y="8" width="359" height="112"/>
                                                     </imageView>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="DpN-Sz-dyF"/>
                                                     <constraint firstAttribute="bottom" secondItem="ecm-UE-1DA" secondAttribute="bottom" constant="8" id="LUu-8K-sfe"/>
@@ -4801,6 +4801,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wks-js-2Ba">
                                                 <rect key="frame" x="0.0" y="128" width="375" height="130"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gn7-7Z-9t6">
+                                                        <rect key="frame" x="8" y="1" width="360" height="130"/>
+                                                        <color key="backgroundColor" red="0.90588235294117647" green="0.92941176470588238" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="130" id="52C-sS-Ld0"/>
+                                                        </constraints>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Bt-Yx-Gtj">
                                                         <rect key="frame" x="8" y="2" width="359" height="40"/>
                                                         <subviews>
@@ -4934,7 +4941,7 @@
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="3Bt-Yx-Gtj" firstAttribute="top" secondItem="wks-js-2Ba" secondAttribute="top" constant="2" id="0zX-y2-JxH"/>
                                                     <constraint firstAttribute="trailing" secondItem="3Bt-Yx-Gtj" secondAttribute="trailing" constant="8" id="1Hu-ZC-1WC"/>
@@ -4942,7 +4949,10 @@
                                                     <constraint firstItem="3Bt-Yx-Gtj" firstAttribute="leading" secondItem="wks-js-2Ba" secondAttribute="leading" constant="8" id="2Vz-7R-FB3"/>
                                                     <constraint firstItem="1DP-uD-Mxu" firstAttribute="top" secondItem="3Bt-Yx-Gtj" secondAttribute="bottom" constant="3" id="b8c-pv-HjA"/>
                                                     <constraint firstAttribute="trailing" secondItem="1DP-uD-Mxu" secondAttribute="trailing" constant="8" id="bhM-TN-ygC"/>
+                                                    <constraint firstItem="gn7-7Z-9t6" firstAttribute="top" secondItem="wks-js-2Ba" secondAttribute="top" constant="1" id="lKV-9c-MMt"/>
+                                                    <constraint firstAttribute="trailing" secondItem="gn7-7Z-9t6" secondAttribute="trailing" constant="7" id="lzO-GI-S6U"/>
                                                     <constraint firstItem="1DP-uD-Mxu" firstAttribute="leading" secondItem="wks-js-2Ba" secondAttribute="leading" constant="8" id="n62-Qu-U51"/>
+                                                    <constraint firstItem="gn7-7Z-9t6" firstAttribute="leading" secondItem="wks-js-2Ba" secondAttribute="leading" constant="8" id="xnk-k1-vlX"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQt-98-jDo">
@@ -4958,6 +4968,13 @@
                                             <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ls9-r5-xGE">
                                                 <rect key="frame" x="0.0" y="268" width="375" height="126"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X2H-xU-bcn">
+                                                        <rect key="frame" x="8" y="11" width="359" height="126"/>
+                                                        <color key="backgroundColor" red="0.90588235294117647" green="0.92941176470588238" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="126" id="vVu-51-OKh"/>
+                                                        </constraints>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IZd-NC-hLe">
                                                         <rect key="frame" x="8" y="3" width="359" height="40"/>
                                                         <subviews>
@@ -5093,13 +5110,16 @@
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="X2H-xU-bcn" secondAttribute="trailing" constant="8" id="5Ai-oS-kbX"/>
                                                     <constraint firstAttribute="trailing" secondItem="PyV-Xx-iW7" secondAttribute="trailing" constant="8" id="MSN-S6-VxT"/>
                                                     <constraint firstAttribute="trailing" secondItem="IZd-NC-hLe" secondAttribute="trailing" constant="8" id="Vck-45-1zL"/>
                                                     <constraint firstAttribute="height" constant="126" id="XWH-rp-13m"/>
                                                     <constraint firstItem="IZd-NC-hLe" firstAttribute="leading" secondItem="Ls9-r5-xGE" secondAttribute="leading" constant="8" id="ZeG-Sb-rWc"/>
                                                     <constraint firstItem="PyV-Xx-iW7" firstAttribute="leading" secondItem="Ls9-r5-xGE" secondAttribute="leading" constant="8" id="aew-jT-yUs"/>
+                                                    <constraint firstItem="X2H-xU-bcn" firstAttribute="top" secondItem="Ls9-r5-xGE" secondAttribute="top" constant="11" id="c8v-8J-Jj2"/>
+                                                    <constraint firstItem="X2H-xU-bcn" firstAttribute="leading" secondItem="Ls9-r5-xGE" secondAttribute="leading" constant="8" id="eGm-qI-PTt"/>
                                                     <constraint firstItem="IZd-NC-hLe" firstAttribute="top" secondItem="Ls9-r5-xGE" secondAttribute="top" constant="3" id="qHZ-Aa-Mfj"/>
                                                     <constraint firstItem="PyV-Xx-iW7" firstAttribute="top" secondItem="IZd-NC-hLe" secondAttribute="bottom" constant="1" id="v7A-x2-r7h"/>
                                                 </constraints>
@@ -5117,6 +5137,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fzw-mg-0hg">
                                                 <rect key="frame" x="0.0" y="404" width="375" height="146"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jCp-jK-fez">
+                                                        <rect key="frame" x="8" y="1" width="359" height="146"/>
+                                                        <color key="backgroundColor" red="0.90588235294117647" green="0.92941176470588238" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="146" id="ZFm-od-ESh"/>
+                                                        </constraints>
+                                                    </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mm9-Au-gw3">
                                                         <rect key="frame" x="8" y="3" width="359" height="24"/>
                                                         <color key="backgroundColor" red="0.83529411760000005" green="0.89411764709999997" blue="0.94901960780000005" alpha="0.69723886989999995" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -5312,8 +5339,9 @@
                                                         </constraints>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.83529411760000005" green="0.89411764709999997" blue="0.94901960780000005" alpha="0.69723886989999995" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
+                                                    <constraint firstItem="jCp-jK-fez" firstAttribute="leading" secondItem="Fzw-mg-0hg" secondAttribute="leading" constant="8" id="510-Re-BWj"/>
                                                     <constraint firstAttribute="trailing" secondItem="mm9-Au-gw3" secondAttribute="trailing" constant="8" id="ANx-uT-hQ5"/>
                                                     <constraint firstItem="Jgh-xZ-KCY" firstAttribute="top" secondItem="mm9-Au-gw3" secondAttribute="bottom" constant="5" id="BGl-3X-n5p"/>
                                                     <constraint firstItem="o85-0T-gjV" firstAttribute="leading" secondItem="Fzw-mg-0hg" secondAttribute="leading" constant="8" id="F7b-EW-GKk"/>
@@ -5323,6 +5351,8 @@
                                                     <constraint firstItem="o85-0T-gjV" firstAttribute="top" secondItem="Jgh-xZ-KCY" secondAttribute="bottom" constant="8" id="euy-t6-9L5"/>
                                                     <constraint firstItem="mm9-Au-gw3" firstAttribute="leading" secondItem="Fzw-mg-0hg" secondAttribute="leading" constant="8" id="gqq-3h-JT2"/>
                                                     <constraint firstAttribute="trailing" secondItem="dUw-Rk-71p" secondAttribute="trailing" constant="9" id="kb9-EX-Oig"/>
+                                                    <constraint firstItem="jCp-jK-fez" firstAttribute="top" secondItem="Fzw-mg-0hg" secondAttribute="top" constant="1" id="meE-RS-euq"/>
+                                                    <constraint firstAttribute="trailing" secondItem="jCp-jK-fez" secondAttribute="trailing" constant="8" id="pc8-Hb-1ad"/>
                                                     <constraint firstItem="pgr-ei-dAp" firstAttribute="top" secondItem="mm9-Au-gw3" secondAttribute="bottom" constant="5" id="rka-uW-WFv"/>
                                                     <constraint firstItem="mm9-Au-gw3" firstAttribute="top" secondItem="Fzw-mg-0hg" secondAttribute="top" constant="3" id="x4y-F7-Pyv"/>
                                                     <constraint firstAttribute="trailing" secondItem="pgr-ei-dAp" secondAttribute="trailing" constant="9" id="yuP-Zg-Twv"/>
@@ -5341,6 +5371,13 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N39-Ya-p5e">
                                                 <rect key="frame" x="0.0" y="560" width="375" height="50"/>
                                                 <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQh-gR-GPx">
+                                                        <rect key="frame" x="8" y="1" width="360" height="50"/>
+                                                        <color key="backgroundColor" red="0.90588235294117647" green="0.92941176470588238" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="50" id="OVJ-dG-lCZ"/>
+                                                        </constraints>
+                                                    </view>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaves1.png" translatesAutoresizingMaskIntoConstraints="NO" id="l4w-Yv-Ocn">
                                                         <rect key="frame" x="16" y="8" width="30" height="30"/>
                                                         <color key="backgroundColor" red="0.99159263959999999" green="0.65791859399999997" blue="0.30179869059999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -5370,11 +5407,14 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.83529411760000005" green="0.89411764709999997" blue="0.94901960780000005" alpha="0.69723886989999995" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="EKJ-m0-yIj" secondAttribute="trailing" constant="15" id="1n8-u7-VCZ"/>
                                                     <constraint firstItem="EKJ-m0-yIj" firstAttribute="leading" secondItem="l4w-Yv-Ocn" secondAttribute="trailing" constant="15" id="8ol-xd-Mtk"/>
                                                     <constraint firstAttribute="trailing" secondItem="pGo-a5-nFz" secondAttribute="trailing" constant="15" id="AqT-tQ-fta"/>
+                                                    <constraint firstItem="jQh-gR-GPx" firstAttribute="leading" secondItem="N39-Ya-p5e" secondAttribute="leading" constant="8" id="B7o-vx-3Tl"/>
+                                                    <constraint firstItem="jQh-gR-GPx" firstAttribute="top" secondItem="N39-Ya-p5e" secondAttribute="top" constant="1" id="BZg-9K-p4W"/>
+                                                    <constraint firstAttribute="trailing" secondItem="jQh-gR-GPx" secondAttribute="trailing" constant="7" id="JTr-Lt-ck0"/>
                                                     <constraint firstItem="pGo-a5-nFz" firstAttribute="top" secondItem="N39-Ya-p5e" secondAttribute="top" constant="20" id="ajT-AL-Cjz"/>
                                                     <constraint firstAttribute="height" constant="50" id="eEJ-as-feD"/>
                                                     <constraint firstItem="l4w-Yv-Ocn" firstAttribute="top" secondItem="N39-Ya-p5e" secondAttribute="top" constant="8" id="kpU-uc-sSK"/>
